[package]
name = "switch-screen"
version = "0.1.0"
edition = "2021"
authors = ["Henry Muru Paenga <meringu@gmail.com>"]
description = "Simple program to switch display topologies in Windows"
license = "MIT OR Apache-2.0"
repository = "https://github.com/meringu/switch-screen"

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
windows = { version = "0.44.0", features = ["Win32_Devices_Display", "Win32_Foundation", "Win32_Graphics_Gdi"] }
