[package]
name = "switch-screen"
version = "0.2.0"
edition = "2021"
authors = ["Henry Muru Paenga <meringu@gmail.com>"]
description = "Simple program to switch display topologies in Windows"
license = "MIT OR Apache-2.0"
repository = "https://github.com/meringu/switch-screen"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rumqttc = "0.22.0"
windows = { version = "0.48.0", features = [
    "Win32_Devices_Display",
    "Win32_Foundation",
] }
